[package]
name = "bloblock"
version = "0.1.0"
authors = ["m0ssc0de <hi.paul.q@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bytes = "1.0" # Follows version used by http
http = "0.2"
hmac = "0.10.1"
sha2 = { version = "0.9", default-features = false }
chrono = "0.4"
base64 = "0.13.0"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }