[package]
name = "bloblock"
version = "0.1.2"
authors = ["m0ssc0de <hi.paul.q@gmail.com>"]
edition = "2018"
description = "A sans I/O libray for Azure Blob Storage."
readme = "Readme.md"
repository = "https://github.com/m0ssc0de/bloblock"
license = "MIT OR Apache-2.0"
keywords = ["sansio", "azure", "blob"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# Follows version used by http
bytes = "1.0"
http = "0.2"
hmac = "0.12"
sha2 = { version = "0.10", default-features = false }
base64 = "0.13.0"
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.5"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
