[package]
name = "justry"
version = "0.1.0"
authors = ["m0ssc0de <hi.paul.q@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.10.1"
sha2 = { version = "0.9", default-features = false }
chrono = "0.4"
base64 = "0.13.0"